--- a/style.css
+++ b/style.css
@@ -1,5 +1,78 @@
-* {
+/* * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+  } */
+
+  body {
+    background-image: url("../image/5818315.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+  
+  h1 {
+    color: darkblue;
+    text-align: center;
+  }
+  
+  h1:hover{
+    transform: scale(1.1);
+    transition: transform 0.5s, width 2s, height 2s, background-color 2s;
+}
+  
+  #wrapper {
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  #userInput {
+    width: 70%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid darkblue;
+    border-radius: 4px;
+  }
+  
+  #myButton {
+    width: 30%;
+    background-color: rgb(186, 186, 55);
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 25px; 
+    font-weight: bold;
+  }
+  
+  #myButton:hover {
+    background-color: rgb(185, 39, 41);
+    transform: scale(1.1);
+    transition: transform 0.5s;
+  }
+  
+  #results {
+    margin: 0 auto;
+    width: 70%;
+    
+    border-radius: 4px;
+    padding: 300px;
+    text-align: left;
+
+    justify-content: left;
+    align-items: left;
+  }
+
+  .container {
+    display: block;
+  }
+
+
+  #pokemonImage {
+    height: 400px;
+    width: 400px;
+    /* padding: 400px; */
   }
