--- a/style.css
+++ b/style.css
@@ -1,78 +1,93 @@
-/* * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  } */
-
-  body {
-    background-image: url("../image/5818315.png");
-    background-size: 100%;
-    background-repeat: no-repeat;
-  }
-  
-  h1 {
-    color: darkblue;
-    text-align: center;
-  }
-  
-  h1:hover{
-    transform: scale(1.1);
-    transition: transform 0.5s, width 2s, height 2s, background-color 2s;
+body {
+  background-image: url("images-poke/5818315.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
-  
-  #wrapper {
-    width: 50%;
-    margin: 0 auto;
-    text-align: center;
-  }
-  
-  #userInput {
-    width: 70%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: 2px solid darkblue;
-    border-radius: 4px;
-  }
-  
-  #myButton {
-    width: 30%;
-    background-color: rgb(186, 186, 55);
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 25px; 
-    font-weight: bold;
-  }
-  
-  #myButton:hover {
-    background-color: rgb(185, 39, 41);
-    transform: scale(1.1);
-    transition: transform 0.5s;
-  }
-  
-  #results {
-    margin: 0 auto;
-    width: 70%;
-    
-    border-radius: 4px;
-    padding: 300px;
-    text-align: left;
 
-    justify-content: left;
-    align-items: left;
-  }
+h1 {
+  color: rgb(199, 191, 44);
+  text-align: center;
+  font-family: 'Pokemon Solid', sans-serif;
+  font-size: 60px;
+  -webkit-text-stroke: 2px rgb(0, 0, 0);
+}
 
-  .container {
-    display: block;
-  }
+h1:hover{
+  transform: scale(1.1);
+transition: transform 0.5s, width 2s, height 2s, background-color 2s;
+}
 
+h2{
+font-family: 'Pokemon Solid', sans-serif;
+font-size: 40px;
+-webkit-text-stroke: 2px rgb(0, 0, 0);
+color:rgb(255, 255, 255);
 
-  #pokemonImage {
-    height: 400px;
-    width: 400px;
-    /* padding: 400px; */
-  }
+}
+
+h1:hover{
+transform: scale(1.1);
+transition: transform 0.5s, width 2s, height 2s, background-color 2s;
+}
+
+#wrapper {
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#userInput {
+  width: 70%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid darkblue;
+  border-radius: 4px;
+}
+
+#myButton {
+  width: 30%;
+  background-color: rgb(186, 186, 55);
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 25px; 
+  font-weight: bold;
+}
+
+#myButton:hover {
+  background-color: rgb(185, 39, 41);
+  transform: scale(1.1);
+transition: transform 0.5s;
+}
+
+#results {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 70%;
+  border-radius: 4px;
+  padding: 3px;
+  text-align: left;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+p {
+  margin: 0;
+  font-size: 18px;
+  font-family: 'Pokemon Solid', sans-serif;
+}
+
+/* footer {
+  
+} */
+
+/* #moves-list {
+  display: grid;
+  grid-template-columns: repeat(6, 250px);
+ 
+} */
